force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>