force-app/main/default/objects/Attendance__c/fields/Anomaly_Flag__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Flag__c</fullName>
    <label>Anomaly Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>