force-app/main/default/objects/Attendance__c/fields/Anomaly_Reason__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Reason__c</fullName>
    <label>Anomaly Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>