force-app/main/default/objects/Attendance__c/fields/Check_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Method__c</fullName>
    <label>Check In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Web</fullName><default>true</default><label>Web</label></value>
            <value><fullName>Mobile</fullName><default>false</default><label>Mobile</label></value>
            <value><fullName>Kiosk</fullName><default>false</default><label>Kiosk</label></value>
            <value><fullName>Offline Sync</fullName><default>false</default><label>Offline Sync</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>