force-app/main/default/objects/Attendance__c/fields/GPS_Lat__c.field-meta.xml
<CustomField>
    <fullName>GPS_Lat__c</fullName>
    <label>GPS Lat</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
</CustomField>