force-app/main/default/objects/Attendance__c/fields/Shift_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Shift_Assignment__c</fullName>
    <label>Shift Assignment</label>
    <referenceTo>Shift_Assignment__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>